# AI-image-Checkers

./: .gitignore  README.md  identifying_ai_image_implementation_plan.md  pyproject.toml
.github/workflows/: ci.yml
AI-image-Checkers-restructured/: pyproject.toml
AI-image-Checkers-restructured/ai_image_id/: fusion.py  schema.py
AI-image-Checkers-restructured/ai_image_id.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
AI-image-Checkers-restructured/ai_image_id/detector/: __init__.py
AI-image-Checkers-restructured/notebooks/: 01_mvp_pipeline.ipynb
AI-image-Checkers-restructured/tests/: test_phase2.py
AI-image-Checkers-restructured/training/: calibrate_eval.py  embed.py  prepare_data.py
ai-image-id-mvp/: README.md  requirements.txt
ai-image-id-mvp/app/: forensics.py  fusion.py  main.py  provenance.py  schema.py
ai-image-id-mvp/app/watermark/: __init__.py  dwt_dct.py
ai-image-id-mvp/tests/: test_pipeline.py
ai_image_id/: __init__.py  forensics.py  fusion.py  ingest.py  main.py  provenance.py  schema.py
ai_image_id/watermark/: __init__.py  synthid_cnn.py
docs/: implementation_plan.md  results.md
notebooks/: 01_mvp_pipeline.ipynb  02_train_detector.ipynb  03_m1_provenance_scenarios.ipynb  04_m2_watermark_scenarios.ipynb
tests/: test_pipeline.py
training/: prepare_data.py  train_head.py
