[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-image-id"
version = "0.1.0"
description = "Evidence-fusion pipeline for identifying AI-generated images (provenance, watermarks, forensics)"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "Pillow>=10.0",
    "PyWavelets>=1.5",
    "imagehash>=4.3",
    "pyexiftool>=0.5",
    "c2pa-python>=0.6",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.29", "python-multipart>=0.0.9"]
watermarks = ["trustmark>=0.8", "transformers>=4.40", "torch>=2.0"]
dev = ["pytest>=8.0"]
all = ["ai-image-id[api,watermarks,dev]"]

[tool.setuptools.packages.find]
include = ["ai_image_id*"]

[tool.ruff]
target-version = "py312"
